--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.1.3",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.37.0",
     "react-images-uploading": "^3.1.7",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
